Some GCThreadLocalData not initialized

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b10
    • generic
    • generic

      Some threads are created before the GC barrier set, and the barrier set is used to construct and destroy the _gc_data in a thread when the thread is constructed or destroyed. To cope with this initialization order problem, the initialization of the _gc_data is deferred for such threads. The barrier set is "installed" via the set_barrier_set function, which is responsible for also performing that deferred _gc_data initialization for threads that have been constructed so far.

      However, set_barrier_set presently only performs that initialization for the current thread, which is the main thread (a JavaThread). But there are configurations where some non-JavaThreads are also created before the barrier set. set_barrier_set should initialize their _gc_data too.

      This doesn't seem to be causing any problems yet, probably because we aren't using the GCThreadLocalData from non-JavaThreads.

            Assignee:
            Kim Barrett
            Reporter:
            Kim Barrett
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: