8209975: Some GCThreadLocalData not initialized

Perform deferred BarrierSet initializations for NonJavaThreads too.

Reviewed-by: eosterlund, pliden